<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.jruby</groupId>
  <artifactId>jruby-graal</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>jruby-graal</name>
  <url>http://maven.apache.org</url>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jruby</groupId>
      <artifactId>jruby</artifactId>
      <version>9.1.13.0</version>
    </dependency>
    <!--<dependency>-->
      <!--<groupId>graal</groupId>-->
      <!--<artifactId>graal</artifactId>-->
      <!--<version>0</version>-->
      <!--<systemPath>/Users/headius/projects/graal/graal/compiler/mxbuild/dists/graal.jar</systemPath>-->
      <!--<scope>system</scope>-->
    <!--</dependency>-->
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <compilerArgs>
            <arg>--add-modules</arg><arg>jdk.internal.vm.ci</arg>
            <arg>--add-exports</arg><arg>jdk.internal.vm.ci/jdk.vm.ci.code=ALL-UNNAMED</arg>
            <arg>--add-exports</arg><arg>jdk.internal.vm.ci/jdk.vm.ci.hotspot=ALL-UNNAMED</arg>
            <arg>--add-exports</arg><arg>jdk.internal.vm.ci/jdk.vm.ci.meta=ALL-UNNAMED</arg>
            <arg>--add-exports</arg><arg>jdk.internal.vm.ci/jdk.vm.ci.runtime=ALL-UNNAMED</arg>
            <arg>--add-exports</arg><arg>jdk.internal.vm.ci/jdk.vm.ci.services=ALL-UNNAMED</arg>
          </compilerArgs>
          <source>9</source>
          <target>9</target>
          <fork>true</fork>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
